tests/src/frontend/typechecking/invalid/type_alias_generic_2.sk
class Bar<T>{}

type Foo<T> = Baz<T>; /* Unbound name: Baz */
